--- a/apps/web/src/app.postcss
+++ b/apps/web/src/app.postcss
@@ -1,1 +1,8 @@
-/* Write your global styles here, in PostCSS syntax */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+	height: 100dvh;
+	width: 100dvw;
+}
